# stm32f407ig-cpp-cmake

./: CMakeLists.txt  README.md  debug_blackmagic.sh  flash_usbdfu.sh  gdb-init.cmd
Cube/HAL/Core/src/: stm32f4xx_hal_msp.c  stm32f4xx_it.c
include/: blinker.h  main.h  stm32f4xx_hal_conf.h
src/: blinker.cpp  mainloop.cpp
